--- a/recons.cabal
+++ b/recons.cabal
@@ -44,7 +44,7 @@ library
                      , transformers
                      , vinyl
 
-  ghc-options: -Wall -fno-warn-name-shadowing -fno-warn-unused-do-bind
+  ghc-options: -Wall -threaded -fno-warn-name-shadowing -fno-warn-unused-do-bind
 
 
 executable Example1 
@@ -70,9 +70,11 @@ executable Example1
                      , vinyl
                      , wai
                      , warp
+                     , ansi-wl-pprint
                      , wl-pprint-terminfo
                      , wl-pprint-extras
 
+  ghc-options: -Wall -threaded -fno-warn-name-shadowing -fno-warn-unused-do-bind
 
   default-language:    Haskell2010
 
