--- a/recons.cabal
+++ b/recons.cabal
@@ -52,8 +52,8 @@ executable Example1
   main-is:             Example1.hs
   default-language:    Haskell2010
   build-depends:       base >= 4.7 && < 5
-                     , recons
                      , aeson
+                     , ansi-wl-pprint
                      , attoparsec
                      , bytestring
                      , containers
@@ -61,7 +61,9 @@ executable Example1
                      , haskeline
                      , http-client
                      , http-types
+                     , interpolatedstring-perl6
                      , mtl
+                     , recons
                      , servant
                      , servant-client
                      , servant-server
@@ -70,9 +72,8 @@ executable Example1
                      , vinyl
                      , wai
                      , warp
-                     , ansi-wl-pprint
-                     , wl-pprint-terminfo
                      , wl-pprint-extras
+                     , wl-pprint-terminfo
 
   ghc-options: -Wall -threaded -fno-warn-name-shadowing -fno-warn-unused-do-bind
 
